# tako

./: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .release-please-manifest.json  AGENTS.md  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  channels.go  cliff.toml  justfile  package.json  release-please-config.json  skills-lock.json  tako.go  tako_test.go
.claude/commands/: blog-post.md  code-scanning-resolve.md  (+3 more)
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
build-presets/: bun.toml  template.toml
commands/: audit-analytics.md  blog-ideas.md  blog-post.md  code-scanning-resolve.md  detail-resolve.md  perf-and-code-quality-audit.md  resolve-code-scanning.md  resolve-detail.md  security-audit.md  spec-sync.md  sweep.md  sync-spec.md
docker/: README.md  build.Dockerfile  bun-server.Dockerfile  bun.Dockerfile  debug-server.Dockerfile  install-authorized-key.sh  mise-builder-glibc.Dockerfile  mise-builder-musl.Dockerfile  proto-builder-glibc.Dockerfile  proto-builder-musl.Dockerfile  tako-builder-musl.Dockerfile  testbed.Dockerfile
docs/: README.md
e2e/: README.md  run.sh
examples/: README.md
grafana/: tako-overview.json
internal/: args.go  args_test.go  channels.go  endpoint.go  endpoint_test.go  secrets.go  secrets_test.go
just/: blog.just  build.just  check.just  release.just  run-debug.just  test.just  testbed.just
presets/: _example  _example.toml  _preset.toml.example  bun-tanstack-start.toml  bun.toml  javascript.toml  js.toml  preset.toml.example
scripts/: README.md  blog-img-generate.sh  check_critical_coverage.sh  install-tako-canary.sh  install-tako-cli-canary.sh  install-tako-cli.sh  install-tako-server-canary.sh  install-tako-server.sh  install-tako.sh  release-notes.sh
sdk/: README.md  package.json
tako/: CHANGELOG.md  Cargo.toml  README.md
tako-channels/: Cargo.toml
tako-core/: Cargo.toml  README.md
tako-core/src/: bootstrap.rs  instance_env.rs  lib.rs  protocol.rs
tako-dev-server/: Cargo.toml  README.md
tako-dev-server/src/: local_ca.rs  local_dns.rs  main.rs  paths.rs  protocol.rs  proxy.rs
tako-runtime/: Cargo.toml
tako-runtime/src/: cache.rs  download.rs  fetch.rs  lib.rs  plugin.rs  registry.rs  types.rs
tako-runtime/src/plugins/: go.rs  javascript.rs
tako-server/: CHANGELOG.md  Cargo.toml  README.md
tako-server/src/: app_command.rs  app_socket_cleanup.rs  boot.rs  channels.rs  channels_ws.rs  defaults.rs  main.rs  metrics.rs  operations.rs  paths.rs  release.rs  release_command.rs  routing.rs  runtime_events.rs  server_state.rs  socket.rs  startup.rs  state_store.rs  tests.rs  version_manager.rs
tako-server/src/instances/: health.rs  logger.rs  mod.rs  network.rs  rolling.rs  spawner.rs
tako-server/src/instances/spawner/: health_probe.rs  mod.rs  readiness.rs  spawn_command.rs  tests.rs
tako-server/src/lb/: mod.rs
tako-server/src/operations/: deploy.rs  dispatch.rs  lifecycle.rs  mod.rs  queries.rs  releases.rs  secrets.rs  tls.rs
tako-server/src/protocol/: mod.rs
tako-server/src/proxy/: config.rs  limits.rs  mod.rs  request.rs  server.rs  service.rs  static_files.rs  tests.rs
tako-server/src/proxy/service/: backend.rs  channels.rs  mod.rs  static_handler.rs
tako-server/src/scaling/: cold_start.rs  idle.rs  mod.rs
tako-server/src/tls/: acme.rs  manager.rs  mod.rs  self_signed.rs  sni.rs
tako-server/tests/: e2e.rs  on_demand_integration.rs  rolling_update_integration.rs  server_integration.rs
tako-server/tests/support/: mod.rs
tako-socket/: Cargo.toml  README.md
tako-socket/src/: lib.rs
tako-spawn/: Cargo.toml
tako-workflows/: Cargo.toml
tako/presets/go/: _example  go.toml
tako/presets/javascript/: _example  javascript.toml
tako/src/: cli.rs  dev_server_client.rs  lib.rs  main.rs  output.rs  paths.rs  shell.rs  ui.rs
tako/src/app/: name.rs
tako/src/commands/: delete.rs  deploy.rs  doctor.rs  helpers.rs  implode.rs  init.rs  logs.rs  mod.rs  project_context.rs  releases.rs  scale.rs  secret.rs  server.rs  status.rs  typegen.rs  upgrade.rs
tako/src/commands/deploy/: artifacts.rs  cache.rs  config.rs  format.rs  manifest.rs  mod.rs  preflight.rs  remote.rs  task_tree.rs
tako/src/commands/deploy/artifacts/: local_build.rs  packaging.rs  runtime_version.rs  tests.rs
tako/src/commands/deploy/task_tree/: tests.rs
tako/src/commands/dev/: ca_setup.rs  client.rs  dev_proxy.rs  linux_setup.rs  local_setup.rs  loopback_proxy.rs  mod.rs  output.rs  output_render.rs  project.rs  runner.rs  shared.rs  tests.rs  tls.rs  tui.rs  types.rs  watcher.rs
tako/src/commands/dev/output/: tests.rs
tako/src/commands/dev/prepare/: linux.rs  local.rs  macos.rs  mod.rs  tls.rs
tako/src/commands/init/: mod.rs  presets.rs  project.rs  scaffold.rs  tests.rs
tako/src/commands/server/: crud.rs  dns.rs  mod.rs  upgrade.rs  wizard.rs
tako/src/commands/server/upgrade/: mod.rs  task_tree.rs
tako/src/commands/status/: mod.rs  remote.rs  render.rs  time.rs
tako/src/commands/upgrade/: install.rs  mod.rs  task_tree.rs  version.rs
tako/src/config/: error.rs  history_toml.rs  merged.rs  mod.rs  secrets.rs  servers_toml.rs  tako_toml.rs  upgrade_channel_toml.rs
tako/src/config/tako_toml/: accessors.rs  edit.rs  mod.rs  parse.rs  schema.rs  tests.rs  validation.rs
tako/src/crypto/: mod.rs  secrets.rs
tako/src/dev/: ca.rs  domain.rs  mod.rs
tako/src/output/: cursor.rs  mod.rs  tracing_fmt.rs
tako/src/output/prompts/: confirm.rs  mod.rs  select.rs  text_field.rs  wizard.rs
tako/src/output/spinners/: mod.rs  phase.rs  transfer.rs
tako/src/runtime/: bun.rs  mod.rs
tako/src/ssh/: client.rs  error.rs  mod.rs  sftp.rs
tako/src/ssh/client/: auth.rs  exec.rs  filesystem.rs  tako.rs
tako/src/validation/: config.rs  mod.rs  routes.rs  secrets.rs
tako/tests/: cli_integration.rs  deploy_e2e.rs  manual_trust_check.rs
tako/tests/fixtures/deploy-alpine/: Dockerfile  entrypoint.sh  fake_tako_server.py
website/: README.md  astro.config.mjs  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
(+521 files in other folders)
