[workspace]
resolver = "3"
members = ["tako-core", "tako-socket", "tako", "tako-server"]

[workspace.package]
edition = "2024"
authors = ["Dan Lilienblum <dlilienblum@gmail.com>"]
description = "Tako is a modern application platform"
license = "MIT"
repository = "https://github.com/lilienblum/tako"
keywords = ["server", "application-server", "platform", "runtime", "framework"]
categories = ["network-programming", "web-programming", "development-tools"]

[workspace.dependencies]
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.5"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = "0.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
