[package]
name = "tako-dev-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Local development server for the Tako application platform"
license.workspace = true
repository.workspace = true

[[bin]]
name = "tako-dev-server"
path = "src/main.rs"

[dependencies]
tako-socket = { path = "../tako-socket" }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { workspace = true }
pingora-core = { version = "0.6", default-features = false, features = ["openssl"] }
pingora-proxy = { version = "0.6", default-features = false, features = ["openssl"] }
pingora-http = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
toml = "0.8"
base64 = "0.22"
rcgen = { version = "0.13", features = ["pem"] }
time = "0.3"
rand = "0.8"
hickory-proto = "0.25"

[dev-dependencies]
tempfile = "3.8"
