[package]
name = "tako-dev-server"
version = "0.0.1-alpha.0"
edition.workspace = true
authors.workspace = true
description = "Local development server for the Tako application platform"
license.workspace = true
repository.workspace = true

[[bin]]
name = "tako-dev-server"
path = "src/main.rs"

[dependencies]
tako-socket = { path = "../tako-socket", version = "0.0.1-alpha.0" }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { workspace = true }
pingora-core = { version = "0.7", default-features = false, features = ["openssl"] }
pingora-proxy = { version = "0.7", default-features = false, features = ["openssl"] }
pingora-http = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dirs = "6.0"
toml = "0.9"
base64 = "0.22"
rcgen = { version = "0.14", features = ["pem"] }
time = "0.3"
getrandom = "0.4"
hickory-proto = "0.25"

[dev-dependencies]
tempfile = "3.25"
