[package]
name = "tako-runtime"
description = "Runtime definitions for the Tako application platform"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.49", features = ["rt", "macros"] }
