[package]
name = "tako-server"
version = "0.0.1-alpha.0"
edition.workspace = true
authors.workspace = true
description = "Official server runtime and proxy for the Tako application platform"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tako-server"
path = "src/main.rs"

[dependencies]
tako-core = { path = "../tako-core", version = "0.0.1-alpha.0" }
tako-socket = { path = "../tako-socket", version = "0.0.1-alpha.0" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.49", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
pingora-core = { version = "0.7", default-features = false, features = ["openssl"] }
pingora-proxy = { version = "0.7", default-features = false, features = ["openssl"] }
pingora-http = "0.7"
pingora-cache = "0.7"
openssl = "0.10"
thiserror = "2.0"
dashmap = "6.1"
parking_lot = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rcgen = "0.14"
instant-acme = "0.8"
x509-parser = "0.18"
base64 = "0.22"
rustls = "0.23"
rustls-pemfile = "2.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3.25"
