[package]
name = "tako-socket"
version = "0.0.1-alpha.0"
edition.workspace = true
authors.workspace = true
description = "Unix socket protocol and client utilities for the Tako platform"
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
