[package]
name = "tako"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
description = "CLI for the Tako application platform"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tako"
path = "src/main.rs"

[[bin]]
name = "tako-dev-server"
path = "src/bin/tako-dev-server/main.rs"

[[bin]]
name = "tako-loopback-proxy"
path = "src/bin/tako-loopback-proxy/main.rs"

[dependencies]
tako-core = { path = "../tako-core", version = "0.0.2" }
tako-runtime = { path = "../tako-runtime", version = "0.0.1" }
tako-socket = { path = "../tako-socket", version = "0.0.2" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
console = "0.16"
indicatif = "0.17"
crossterm = "0.29"
sysinfo = "0.38"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
thiserror = "2.0"
dirs = "6.0"

# File watching
notify = "8.2"
notify-debouncer-mini = "0.7"

# HTTP proxy/server
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
openssl.workspace = true
pingora-core = { version = "0.8", default-features = false, features = ["openssl"] }
pingora-proxy = { version = "0.8", default-features = false, features = ["openssl"] }
pingora-http = "0.8"
hickory-proto = "0.25"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

# HTTP client for proxying
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# SSH client
russh = "0.58"
russh-keys = "0.49"
russh-sftp = "2.1"
ssh-key = "0.6"
async-trait = "0.1"

# Certificate generation for local CA
rcgen = { version = "0.14", features = ["pem"] }
x509-parser = "0.18"
time = { version = "0.3", features = ["local-offset"] }
pem = "3.0"

# Build system (archiving)
zstd = "0.13"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"

# Encryption for secrets
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.4"
libc = "0.2"

# SQLite state store for dev-server
rusqlite = { version = "0.32", features = ["bundled"] }


[dev-dependencies]
tempfile = "3.25"
